pcr-service added

--- a/components/openid-token-builder/pom.xml
+++ b/components/openid-token-builder/pom.xml
@@ -23,6 +23,10 @@
 	
 	<name>OpenID Token Builder</name>
 
+	<properties>
+		<maven.javadoc.skip>true</maven.javadoc.skip>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.wso2.carbon.identity</groupId>
@@ -85,11 +89,38 @@
             <version>2.0.13</version>
             <scope>provided</scope>
         </dependency>
+		<dependency>
+			<groupId>com.wso2telco.core</groupId>
+			<artifactId>pcr-service</artifactId>
+			<version>1.0</version>
+		</dependency>
     </dependencies>
 
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.3</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-scr-plugin</artifactId>
+				<version>1.7.2</version>
+				<executions>
+					<execution>
+						<id>generate-scr-scrdescriptor</id>
+						<goals>
+							<goal>scr</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
@@ -99,6 +130,9 @@
 					<instructions>
 						<Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
 						<Bundle-Name>${project.artifactId}</Bundle-Name>
+						<Bundle-Version>${project.version}</Bundle-Version>
+						<Bundle-Description>Open ID Token Builder Bundle</Bundle-Description>
+						<Private-Package>com.wso2telco.internal</Private-Package>
 						<Import-Package>
 							javax.xml.namespace,
 							javax.xml.stream,
@@ -158,12 +192,13 @@
 							org.wso2.carbon.idp.mgt;
 							version="${carbon.identity.package.import.version.range}",
 							com.wso2telco.core.config.*,
-							com.wso2telco.dbutils.*
+							com.wso2telco.dbutils.*,
+							com.wso2telco.core.pcrservice.*
 						</Import-Package>
 						<Export-Package>
 							com.wso2telco.claimhandler.*, com.wso2telco.dao.*, com.wso2telco.model.*,
 							com.wso2telco.openidtokenbuilder.*, com.wso2telco.reqpathsequencehandler.*,
-							com.wso2telco.transaction.log.*, com.wso2telco.util.*
+							com.wso2telco.transaction.log.*, com.wso2telco.util.*,!com.wso2telco.internal.*
 						</Export-Package>
 						<Embed-Dependency>
 							nimbus-jose-jwt|json-smart;scope=compile|runtime;inline=false
@@ -171,19 +206,6 @@
 						<DynamicImport-Package>*</DynamicImport-Package>
 					</instructions>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-scr-plugin</artifactId>
-				<version>1.9.0</version>
-				<executions>
-					<execution>
-						<id>generate-scr-scrdescriptor</id>
-						<goals>
-							<goal>scr</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
