--- a/components/openid-token-builder/pom.xml
+++ b/components/openid-token-builder/pom.xml
@@ -92,7 +92,7 @@
 		<dependency>
 			<groupId>com.wso2telco.core</groupId>
 			<artifactId>pcr-service</artifactId>
-			<version>1.0</version>
+			<version>2.0.4-SNAPSHOT</version>
 		</dependency>
     </dependencies>
 
