--- a/components/openid-token-builder/pom.xml
+++ b/components/openid-token-builder/pom.xml
@@ -13,7 +13,7 @@
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
 		<artifactId>component-ids-parent</artifactId>
-		<version>2.0.13</version>
+		<version>2.0.14-SNAPSHOT</version>
 		<relativePath>../../parent/pom.xml</relativePath>
 	</parent>
 
@@ -77,7 +77,7 @@
         <dependency>
             <groupId>com.wso2telco.ids</groupId>
             <artifactId>openid-token-builder</artifactId>
-            <version>2.0.13</version>
+            <version>2.0.14-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -86,7 +86,7 @@
         <dependency>
             <groupId>com.wso2telco.ids</groupId>
             <artifactId>ids-data-publisher</artifactId>
-            <version>2.0.13</version>
+            <version>2.0.14-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 		<dependency>
