--- a/features/com.wso2telco.ids.saaserver.feature/pom.xml
+++ b/features/com.wso2telco.ids.saaserver.feature/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>component-ids-feature</artifactId>
         <groupId>com.wso2telco.ids</groupId>
-        <version>2.0.13</version>
+        <version>2.0.14-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
