--- a/components/session-updater/pom.xml
+++ b/components/session-updater/pom.xml
@@ -106,6 +106,10 @@
             <version>2.0.13</version>
             <scope>provided</scope>
         </dependency>
+		<dependency>
+			<groupId>org.hashids</groupId>
+			<artifactId>hashids</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<!--finalName>SessionUpdater</finalName-->
