--- a/components/ids-data-publisher/pom.xml
+++ b/components/ids-data-publisher/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
         <groupId>com.wso2telco.ids</groupId>
         <artifactId>component-ids-parent</artifactId>
-        <version>2.0.14-SNAPSHOT</version>
+        <version>2.1.0</version>
         <relativePath>../../parent/pom.xml</relativePath>
     </parent>
 
@@ -93,7 +91,7 @@
                         <Bundle-Name>${project.artifactId}</Bundle-Name>
                         <Export-Package>com.wso2telco.ids.datapublisher.*
                         </Export-Package>
-                        <Import-Package></Import-Package>
+                        <Import-Package />
                         <DynamicImport-Package>*</DynamicImport-Package>
                     </instructions>
                 </configuration>
