--- a/components/authentication-endpoint/src/main/webapp/WEB-INF/web.xml
+++ b/components/authentication-endpoint/src/main/webapp/WEB-INF/web.xml
@@ -230,6 +230,11 @@
         <servlet-name>registration.do</servlet-name>
         <jsp-file>/registration.jsp</jsp-file>
     </servlet>
+    
+    <servlet>
+        <servlet-name>user_consent.do</servlet-name>
+        <jsp-file>/mcx-user-registration/user_consent.jsp</jsp-file>
+    </servlet>
 
     <servlet-mapping>
         <servlet-name>terms_and_conditions</servlet-name>
@@ -365,6 +370,11 @@
     <servlet-mapping>
         <servlet-name>registration.do</servlet-name>
         <url-pattern>/registration.do</url-pattern>
+    </servlet-mapping>
+    
+    <servlet-mapping>
+        <servlet-name>user_consent.do</servlet-name>
+        <url-pattern>/consent.do</url-pattern>
     </servlet-mapping>
 
     <error-page>
