--- a/components/authentication-endpoint/src/main/webapp/WEB-INF/web.xml
+++ b/components/authentication-endpoint/src/main/webapp/WEB-INF/web.xml
@@ -221,6 +221,12 @@
         <jsp-file>/registration.jsp</jsp-file>
     </servlet>
 
+    <!-- -->
+    <servlet>
+        <servlet-name>voice_ivr_waiting</servlet-name>
+        <jsp-file>/voice_ivr_waiting.jsp</jsp-file>
+    </servlet>
+
     <servlet-mapping>
         <servlet-name>terms_and_conditions</servlet-name>
         <url-pattern>/terms_and_conditions</url-pattern>
@@ -355,6 +361,12 @@
     <servlet-mapping>
         <servlet-name>registration.do</servlet-name>
         <url-pattern>/registration.do</url-pattern>
+    </servlet-mapping>
+
+    <!-- Voice ivr waiting page-->
+    <servlet-mapping>
+        <servlet-name>voice_ivr_waiting</servlet-name>
+        <url-pattern>/mcx-user-registration/ivr_waiting</url-pattern>
     </servlet-mapping>
 
     <error-page>
