PCR Service issue fix

--- a/components/openid-token-builder/pom.xml
+++ b/components/openid-token-builder/pom.xml
@@ -87,7 +87,7 @@
 		<dependency>
 			<groupId>com.wso2telco.core</groupId>
 			<artifactId>pcr-service</artifactId>
-			<version>2.0.21</version>
+			<version>2.0.23-SNAPSHOT</version>
 		</dependency>
     </dependencies>
 
@@ -127,7 +127,7 @@
 						<Bundle-Name>${project.artifactId}</Bundle-Name>
 						<Bundle-Version>${project.version}</Bundle-Version>
 						<Bundle-Description>Open ID Token Builder Bundle</Bundle-Description>
-						<!-- <Private-Package>com.wso2telco.internal</Private-Package> -->
+						<Private-Package>com.wso2telco.internal</Private-Package>
 						<Import-Package>
 							javax.xml.namespace,
 							javax.xml.stream,
@@ -193,7 +193,7 @@
 						<Export-Package>
 							com.wso2telco.claimhandler.*, com.wso2telco.dao.*, com.wso2telco.model.*,
 							com.wso2telco.openidtokenbuilder.*, com.wso2telco.reqpathsequencehandler.*,
-							com.wso2telco.transaction.log.*, com.wso2telco.util.*,com.wso2telco.internal.*
+							com.wso2telco.transaction.log.*, com.wso2telco.util.*,!com.wso2telco.internal.*
 						</Export-Package>
 						<Embed-Dependency>
 							nimbus-jose-jwt|json-smart;scope=compile|runtime;inline=false
