--- a/components/gsma-authenticators/pom.xml
+++ b/components/gsma-authenticators/pom.xml
@@ -19,7 +19,7 @@
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
 		<artifactId>component-ids-parent</artifactId>
-                <version>2.2.0-rc1</version>
+                <version>2.2.0-SNAPSHOT</version>
                 <relativePath>../../parent/pom.xml</relativePath>
 	</parent>
 
@@ -121,7 +121,7 @@
         <dependency>
             <groupId>com.wso2telco.ids</groupId>
             <artifactId>ids-data-publisher</artifactId>
-            <version>2.2.0-rc1</version>
+            <version>2.2.0-SNAPSHOT</version>
 			<scope>provided</scope>
         </dependency>
 		<dependency>
