--- a/components/portal/pom.xml
+++ b/components/portal/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.wso2telco.ids</groupId>
 	<artifactId>component-ids-parent</artifactId>
-        <version>2.2.0-rc1</version>
+        <version>2.2.0-SNAPSHOT</version>
         <relativePath>../../parent/pom.xml</relativePath>  
 </parent>
   <groupId>com.wso2telco.ids</groupId>
