--- a/components/gsma-authenticators/pom.xml
+++ b/components/gsma-authenticators/pom.xml
@@ -115,7 +115,7 @@
         <dependency>
             <groupId>com.wso2telco.core</groupId>
             <artifactId>sp-config-util</artifactId>
-            <version>2.0.23-rc1</version>
+            <version>2.0.23-SNAPSHOT</version>
 			<scope>provided</scope>
         </dependency>
         <dependency>
