--- a/components/authentication-endpoint/src/main/webapp/WEB-INF/web.xml
+++ b/components/authentication-endpoint/src/main/webapp/WEB-INF/web.xml
@@ -48,20 +48,20 @@
     <!-- *************** End of Global configurations ********************** -->
 
     <!--Display scopes in the consent page.-->
-    <listener>       
+    <listener>
       <listener-class>com.wso2telco.identity.application.authentication.endpoint.InitVariables</listener-class>
-   	</listener>  
-   
+   	</listener>
+
     <context-param>
         <param-name>displayScopes</param-name>
         <param-value>true</param-value>
     </context-param>
 
     <!-- Set default Locale Resource Path here -->
-    <context-param> 
+    <context-param>
     	<param-name>javax.servlet.jsp.jstl.fmt.localizationContext</param-name>
-    	<param-value>org.wso2.carbon.identity.application.authentication.endpoint.i18n.Resources</param-value> 
-    </context-param> 
+    	<param-value>org.wso2.carbon.identity.application.authentication.endpoint.i18n.Resources</param-value>
+    </context-param>
 
     <filter>
         <filter-name>HttpHeaderSecurityFilter</filter-name>
@@ -230,7 +230,10 @@
         <servlet-name>registration.do</servlet-name>
         <jsp-file>/registration.jsp</jsp-file>
     </servlet>
-
+    <servlet>
+        <servlet-name>user_attribute_consent.do</servlet-name>
+        <jsp-file>/mcx-user-registration/attribute_consent.jsp</jsp-file>
+    </servlet>
     <servlet-mapping>
         <servlet-name>terms_and_conditions</servlet-name>
         <url-pattern>/terms_and_conditions</url-pattern>
@@ -365,6 +368,10 @@
     <servlet-mapping>
         <servlet-name>registration.do</servlet-name>
         <url-pattern>/registration.do</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>user_attribute_consent.do</servlet-name>
+        <url-pattern>/attributeconsent.do</url-pattern>
     </servlet-mapping>
 
     <error-page>
