--- a/components/authentication-endpoint/pom.xml
+++ b/components/authentication-endpoint/pom.xml
@@ -106,6 +106,11 @@
             <artifactId>org.wso2.carbon.utils</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+			<groupId>com.wso2telco.core</groupId>
+			<artifactId>config-util</artifactId>
+			<scope>provided</scope>
+		</dependency>
 		<!--<dependency>
 			<groupId>org.wso2.carbon.identity</groupId>
 			<artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
