--- a/components/authentication-endpoint/src/main/webapp/WEB-INF/web.xml
+++ b/components/authentication-endpoint/src/main/webapp/WEB-INF/web.xml
@@ -48,6 +48,10 @@
     <!-- *************** End of Global configurations ********************** -->
 
     <!--Display scopes in the consent page.-->
+    <listener>       
+      <listener-class>com.wso2telco.identity.application.authentication.endpoint.InitVariables</listener-class>
+   	</listener>  
+   
     <context-param>
         <param-name>displayScopes</param-name>
         <param-value>true</param-value>
@@ -59,20 +63,14 @@
             javax.servlet.jsp.jstl.fmt.locale
         </param-name>
         <param-value>
-            en-US
+            ${javax.servlet.jsp.jstl.fmt.locale}
         </param-value>
     </context-param>
 
     <!-- Set default Locale Resource Path here -->
     <context-param> 
-    <param-name>javax.servlet.jsp.jstl.fmt.localizationContext</param-name>
-    <param-value>org.wso2.carbon.identity.application.authentication.endpoint.i18n.Resources</param-value> 
-    </context-param> 
-
-    <!-- Set falllback Locale here -->
-    <context-param> 
-        <param-name>javax.servlet.jsp.jstl.i18n.fallbackLocale</param-name> 
-        <param-value>en-US</param-value> 
+    	<param-name>javax.servlet.jsp.jstl.fmt.localizationContext</param-name>
+    	<param-value>org.wso2.carbon.identity.application.authentication.endpoint.i18n.Resources</param-value> 
     </context-param> 
 
     <filter>
