--- a/components/user-claim-retriever/pom.xml
+++ b/components/user-claim-retriever/pom.xml
@@ -18,7 +18,7 @@
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
 		<artifactId>component-ids-parent</artifactId>
-                <version>2.2.0-SNAPSHOT</version>
+                <version>2.2.0</version>
                 <relativePath>../../parent/pom.xml</relativePath>
 	</parent>
 
