--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -21,7 +21,7 @@
 	<groupId>com.wso2telco.ids</groupId>
 	<artifactId>component-ids-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>2.2.0</version>
+	<version>2.3.0-SNAPSHOT</version>
 	<name>WSO2Telco Core - Component</name>
 	<description>WSO2Telco Core Aggregate Perent pom</description>
 	<url>http://wso2telco.com</url>
@@ -48,7 +48,7 @@
                 <url>https://github.com/WSO2Telco/component-ids.git</url>
                 <developerConnection>scm:git:https://github.com/WSO2Telco/component-ids.git</developerConnection>
                 <connection>scm:git:https://github.com/WSO2Telco/component-ids.git</connection>
-                <tag>vv2.2.0</tag>
+                <tag>HEAD</tag>
         </scm>
 
 
@@ -1646,7 +1646,7 @@
 		<org.wso2.amber.version>0.22.1358727.wso2v4</org.wso2.amber.version>
 		<hash.ids.version>1.0.1</hash.ids.version>
 		<!--from intermediate pom -->
-		<com.wso2telco.ids.version>2.2.0</com.wso2telco.ids.version>		
+		<com.wso2telco.ids.version>2.3.0-SNAPSHOT</com.wso2telco.ids.version>		
 
 		<org.wso2.carbon.version>4.4.3</org.wso2.carbon.version>
 		<org.wso2.carbon.identity.version>5.0.7</org.wso2.carbon.identity.version>
