--- a/components/openid-token-builder/pom.xml
+++ b/components/openid-token-builder/pom.xml
@@ -81,13 +81,13 @@
         <dependency>
             <groupId>com.wso2telco.ids</groupId>
             <artifactId>ids-data-publisher</artifactId>
-            <version>2.3.0-SNAPSHOT</version>
+            <version>2.2.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 		<dependency>
 			<groupId>com.wso2telco.core</groupId>
 			<artifactId>pcr-service</artifactId>
-			<version>2.0.24-SNAPSHOT</version>
+			<version>2.0.23</version>
 		</dependency>
     </dependencies>
 
