--- a/components/openid-token-builder/pom.xml
+++ b/components/openid-token-builder/pom.xml
@@ -87,7 +87,7 @@
 		<dependency>
 			<groupId>com.wso2telco.core</groupId>
 			<artifactId>pcr-service</artifactId>
-			<version>2.2.0-SNAPSHOT</version>
+			<version>2.2.0</version>
 		</dependency>
     </dependencies>
 
