--- a/components/gsma-authenticators/pom.xml
+++ b/components/gsma-authenticators/pom.xml
@@ -128,7 +128,11 @@
 			<groupId>org.hashids</groupId>
 			<artifactId>hashids</artifactId>
 		</dependency>
-    </dependencies>
+		<dependency>
+			<groupId>com.wso2telco.core</groupId>
+			<artifactId>dbutils</artifactId>
+		</dependency>
+	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
