--- a/components/openid-token-builder/pom.xml
+++ b/components/openid-token-builder/pom.xml
@@ -197,7 +197,7 @@
 						</Import-Package>
 						<Export-Package>
 							com.wso2telco.claimhandler.*, com.wso2telco.dao.*, com.wso2telco.model.*,
-							com.wso2telco.openidtokenbuilder.*,com.wso2telco.grantHandler.*,
+							com.wso2telco.openidtokenbuilder.*,com.wso2telco.grant.*,
 							 com.wso2telco.reqpathsequencehandler.*, com.wso2telco.transaction.log.*, 
 							 com.wso2telco.util.*,!com.wso2telco.internal.*
 						</Export-Package>
