--- a/components/sp-seamless-provision/pom.xml
+++ b/components/sp-seamless-provision/pom.xml
@@ -73,6 +73,26 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+			<groupId>com.wso2telco.ids</groupId>
+			<artifactId>ids-data-publisher</artifactId>
+			<version>2.2.0-SNAPSHOT</version>
+			<scope>provided</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>log4j</groupId>
+					<artifactId>log4j</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-jdk14</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
 			<groupId>org.wso2.carbon</groupId>
 			<artifactId>org.wso2.carbon.logging</artifactId>
 			<exclusions>
