--- a/components/auth-proxy-service/pom.xml
+++ b/components/auth-proxy-service/pom.xml
@@ -80,6 +80,12 @@
         <scope>provided</scope>
     </dependency>
     <dependency>
+        <groupId>com.wso2telco.ids</groupId>
+        <artifactId> openid-token-builder</artifactId>
+        <version>2.3.0-SNAPSHOT</version>
+        <scope>provided</scope>
+    </dependency>
+    <dependency>
         <groupId>com.wso2telco.core</groupId>
         <artifactId>config-util</artifactId>
         <scope>provided</scope>
