--- a/components/sign/pom.xml
+++ b/components/sign/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.wso2telco.ids</groupId>
 	<artifactId>component-ids-parent</artifactId>
-        <version>2.3.0-rc3</version>
+        <version>2.3.0-SNAPSHOT</version>
         <relativePath>../../parent/pom.xml</relativePath>  
 </parent>
   <artifactId>sign</artifactId>
