--- a/components/authentication-endpoint/pom.xml
+++ b/components/authentication-endpoint/pom.xml
@@ -19,7 +19,7 @@
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
 		<artifactId>component-ids-parent</artifactId>
-		<version>2.3.0-SNAPSHOT</version>
+		<version>2.2.0-SNAPSHOT</version>
 		<relativePath>../../parent/pom.xml</relativePath>
 	</parent>
 
@@ -111,18 +111,11 @@
 			<artifactId>config-util</artifactId>
 			<scope>provided</scope>
 		</dependency>
-		<!--<dependency>
+		<dependency>
 			<groupId>org.wso2.carbon.identity</groupId>
-			<artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
-			<version>5.0.7</version>
+			<artifactId>org.wso2.carbon.identity.oauth</artifactId>
 			<scope>provided</scope>
-		</dependency>-->
-		<!--<dependency>
-			<groupId>org.wso2.carbon.identity</groupId>
-			<artifactId>org.wso2.carbon.identity.application.authentication.endpoint.util</artifactId>
-			<version>5.0.7</version>
-			<scope>provided</scope>
-		</dependency>-->
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
