--- a/components/openid-extension/pom.xml
+++ b/components/openid-extension/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>component-ids-parent</artifactId>
         <groupId>com.wso2telco.ids</groupId>
-        <version>2.3.0-SNAPSHOT</version>
+        <version>2.3.0-rc4</version>
         <relativePath>../../parent/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
