--- a/components/saa-server/pom.xml
+++ b/components/saa-server/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>com.wso2telco.ids</groupId>
         <artifactId>component-ids-parent</artifactId>
-        <version>2.3.0-SNAPSHOT</version>
+        <version>2.3.0-rc4</version>
         <relativePath>../../parent/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
