[IDSDEV-746]feature creation for premiuminfo bundling to product-ids,[IDSDEV-698] Fixed sonar issues

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -26,6 +26,7 @@
 		<module>com.wso2telco.ids.sign.ui.feature</module>
 		<module>com.wso2telco.ids.datapublisher.feature</module>
         <module>com.wso2telco.ids.saaserver.feature</module>
-    </modules>
+		<module>com.wso2telco.ids.premiuminfo.feature</module>
+	</modules>
 
 </project>
