[IDSDEV-742] Fixed the SMS url issue when shortenurl is disabled

--- a/components/authentication-endpoint/src/main/webapp/WEB-INF/web.xml
+++ b/components/authentication-endpoint/src/main/webapp/WEB-INF/web.xml
@@ -289,7 +289,7 @@
 
     <servlet-mapping>
         <servlet-name>sms_auth</servlet-name>
-        <url-pattern>/sms</url-pattern>
+        <url-pattern>/sms/*</url-pattern>
     </servlet-mapping>
 
     <servlet-mapping>
