--- a/components/openid-token-builder/pom.xml
+++ b/components/openid-token-builder/pom.xml
@@ -58,10 +58,10 @@
 			<groupId>org.apache.amber.wso2</groupId>
 			<artifactId>amber</artifactId>
 		</dependency>
-		<dependency>
+		<!--dependency>
 			<groupId>org.wso2.carbon</groupId>
 			<artifactId>org.wso2.carbon.logging</artifactId>
-		</dependency>
+		</dependency-->
 		<dependency>
 			<groupId>commons-httpclient.wso2</groupId>
 			<artifactId>commons-httpclient</artifactId>
