--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -863,6 +863,14 @@
 			<version>${com.wso2telco.ids.version}</version>
 			<type>war</type>
 		</dependency>
+
+			<dependency>
+				<groupId>com.wso2telco.ids</groupId>
+				<artifactId>token-introspection</artifactId>
+				<version>${com.wso2telco.ids.version}</version>
+				<type>war</type>
+			</dependency>
+
 			<!-- User registration dependacies -->
 
 			<dependency>
