--- a/components/token-introspection/pom.xml
+++ b/components/token-introspection/pom.xml
@@ -24,7 +24,7 @@
         <artifactId>component-ids-parent</artifactId>
         <groupId>com.wso2telco.ids</groupId>
         <version>2.3.0-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
+        <relativePath>../../parent/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>token-introspection</artifactId>
@@ -154,11 +154,6 @@
             <version>4.2.0</version>
             <scope>provided</scope>
         </dependency>
-        <!--dependency>
-            <groupId>org.wso2.carbon.identity</groupId>
-            <artifactId>org.wso2.carbon.identity.oauth</artifactId>
-            <version>5.1.3</version>
-        </dependency-->
         <dependency>
             <groupId>org.wso2.carbon.identity</groupId>
             <artifactId>org.wso2.carbon.identity.oauth</artifactId>
