--- a/components/auth-proxy-service/pom.xml
+++ b/components/auth-proxy-service/pom.xml
@@ -11,7 +11,7 @@
 <parent>
     <groupId>com.wso2telco.ids</groupId>
     <artifactId>component-ids-parent</artifactId>
-    <version>2.3.0-SNAPSHOT</version>
+    <version>2.3.0-rc5</version>
     <relativePath>../../parent/pom.xml</relativePath>
 </parent>
 
@@ -76,13 +76,13 @@
     <dependency>
         <groupId>com.wso2telco.ids</groupId>
         <artifactId>openid-extension</artifactId>
-        <version>2.3.0-SNAPSHOT</version>
+        <version>2.3.0-rc5</version>
         <scope>provided</scope>
     </dependency>
     <dependency>
         <groupId>com.wso2telco.ids</groupId>
         <artifactId> openid-token-builder</artifactId>
-        <version>2.3.0-SNAPSHOT</version>
+        <version>2.3.0-rc5</version>
         <scope>provided</scope>
     </dependency>
     <dependency>
@@ -103,7 +103,7 @@
     <dependency>
         <groupId>com.wso2telco.ids</groupId>
         <artifactId>ids-data-publisher</artifactId>
-        <version>2.3.0-SNAPSHOT</version>
+        <version>2.3.0-rc5</version>
         <scope>provided</scope>
     </dependency>
 </dependencies>
