--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -1688,6 +1688,8 @@
 
         <httpasyncclient.version>4.0</httpasyncclient.version>
         <httpcore-nio.version>4.3</httpcore-nio.version>
+	<org.codehaus.jettison.version>1.3.7</org.codehaus.jettison.version>
+	<com.fasterxml.jackson.jaxrs.version>2.4.2</com.fasterxml.jackson.jaxrs.version>
 
     </properties>
 
