--- a/components/gsma-authenticators/pom.xml
+++ b/components/gsma-authenticators/pom.xml
@@ -19,7 +19,7 @@
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
 		<artifactId>component-ids-parent</artifactId>
-		<version>2.3.0-SNAPSHOT</version>
+		<version>2.3.0</version>
 		<relativePath>../../parent/pom.xml</relativePath>
 	</parent>
 
@@ -119,7 +119,7 @@
 		<dependency>
 			<groupId>com.wso2telco.ids</groupId>
 			<artifactId>ids-data-publisher</artifactId>
-			<version>2.3.0-SNAPSHOT</version>
+			<version>2.3.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
