--- a/components/dashboard/pom.xml
+++ b/components/dashboard/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.wso2telco.ids</groupId>
     <artifactId>component-ids-parent</artifactId>
-    <version>2.3.0</version>
+    <version>2.3.1-SNAPSHOT</version>
     <relativePath>../../parent/pom.xml</relativePath>
   </parent>
   <groupId>com.wso2telco.ids</groupId>
