--- a/components/authentication-endpoint/pom.xml
+++ b/components/authentication-endpoint/pom.xml
@@ -19,7 +19,7 @@
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
 		<artifactId>component-ids-parent</artifactId>
-		<version>2.3.1-SNAPSHOT</version>
+		<version>2.3.0</version>
 		<relativePath>../../parent/pom.xml</relativePath>
 	</parent>
 
