--- a/features/com.wso2telco.ids.premiuminfo.feature/pom.xml
+++ b/features/com.wso2telco.ids.premiuminfo.feature/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <artifactId>component-ids-feature</artifactId>
         <groupId>com.wso2telco.ids</groupId>
-        <version>2.3.0-SNAPSHOT</version>
+        <version>2.3.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
