--- a/components/auth-proxy-service/pom.xml
+++ b/components/auth-proxy-service/pom.xml
@@ -106,6 +106,10 @@
         <version>2.3.0-SNAPSHOT</version>
         <scope>provided</scope>
     </dependency>
+    <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpasyncclient</artifactId>
+    </dependency>
 </dependencies>
 
 <build>
