--- a/components/auth-proxy-service/pom.xml
+++ b/components/auth-proxy-service/pom.xml
@@ -111,6 +111,10 @@
         <version>2.4.0-SNAPSHOT</version>
         <scope>provided</scope>
     </dependency>
+    <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpasyncclient</artifactId>
+    </dependency>
 </dependencies>
 
 <build>
