--- a/components/auth-proxy-service/pom.xml
+++ b/components/auth-proxy-service/pom.xml
@@ -112,6 +112,11 @@
         <scope>provided</scope>
     </dependency>
     <dependency>
+        <groupId>com.wso2telco.ids</groupId>
+        <artifactId>common-util</artifactId>
+        <version>2.3.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpasyncclient</artifactId>
     </dependency>
