--- a/components/session-updater/pom.xml
+++ b/components/session-updater/pom.xml
@@ -102,6 +102,13 @@
             <version>2.3.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore-nio</artifactId>
+		</dependency><dependency>
+		<groupId>org.apache.httpcomponents</groupId>
+		<artifactId>httpasyncclient</artifactId>
+	</dependency>
 	</dependencies>
 	<build>
 		<!--finalName>SessionUpdater</finalName-->
