--- a/components/auth-proxy-service/pom.xml
+++ b/components/auth-proxy-service/pom.xml
@@ -10,9 +10,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 <parent>
     <groupId>com.wso2telco.ids</groupId>
-    <artifactId>component-ids-parent</artifactId>
-    <version>2.3.0</version>
-    <relativePath>../../parent/pom.xml</relativePath>
+    <artifactId>component-ids</artifactId>
+    <version>2.4.0-SNAPSHOT</version>
+    <relativePath>../../pom.xml</relativePath>
 </parent>
 
 <modelVersion>4.0.0</modelVersion>
@@ -76,13 +76,13 @@
     <dependency>
         <groupId>com.wso2telco.ids</groupId>
         <artifactId>openid-extension</artifactId>
-        <version>2.3.0</version>
+        <version>2.4.0-SNAPSHOT</version>
         <scope>provided</scope>
     </dependency>
     <dependency>
         <groupId>com.wso2telco.ids</groupId>
         <artifactId> openid-token-builder</artifactId>
-        <version>2.3.0</version>
+        <version>2.4.0-SNAPSHOT</version>
         <scope>provided</scope>
     </dependency>
     <dependency>
@@ -108,7 +108,7 @@
     <dependency>
         <groupId>com.wso2telco.ids</groupId>
         <artifactId>ids-data-publisher</artifactId>
-        <version>2.3.0</version>
+        <version>2.4.0-SNAPSHOT</version>
         <scope>provided</scope>
     </dependency>
 </dependencies>
