--- a/components/authenticate-selector/pom.xml
+++ b/components/authenticate-selector/pom.xml
@@ -18,9 +18,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
-		<artifactId>component-ids-parent</artifactId>
-                <version>2.3.0</version>
-                <relativePath>../../parent/pom.xml</relativePath>
+		<artifactId>component-ids</artifactId>
+                <version>2.4.0-SNAPSHOT</version>
+                <relativePath>../../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>authenticate-selector</artifactId>
