--- a/components/gsma-authenticators/pom.xml
+++ b/components/gsma-authenticators/pom.xml
@@ -18,9 +18,9 @@
 
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
-		<artifactId>component-ids-parent</artifactId>
-		<version>2.3.0</version>
-		<relativePath>../../parent/pom.xml</relativePath>
+		<artifactId>component-ids</artifactId>
+		<version>2.4.0-SNAPSHOT</version>
+		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -119,7 +119,7 @@
 		<dependency>
 			<groupId>com.wso2telco.ids</groupId>
 			<artifactId>ids-data-publisher</artifactId>
-			<version>2.3.0</version>
+			<version>2.4.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
