--- a/components/portal/pom.xml
+++ b/components/portal/pom.xml
@@ -4,9 +4,9 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.wso2telco.ids</groupId>
-	<artifactId>component-ids-parent</artifactId>
-        <version>2.3.0</version>
-        <relativePath>../../parent/pom.xml</relativePath>  
+	<artifactId>component-ids</artifactId>
+        <version>2.4.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>  
 </parent>
   <groupId>com.wso2telco.ids</groupId>
   <artifactId>portal</artifactId>
