--- a/components/premium-info/pom.xml
+++ b/components/premium-info/pom.xml
@@ -2,9 +2,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
         <groupId>com.wso2telco.ids</groupId>
-        <artifactId>component-ids-parent</artifactId>
-        <version>2.3.0</version>
-        <relativePath>../../parent/pom.xml</relativePath>
+        <artifactId>component-ids</artifactId>
+        <version>2.4.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>premiuminfo</artifactId>
