--- a/components/token-introspection/pom.xml
+++ b/components/token-introspection/pom.xml
@@ -19,10 +19,10 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>component-ids-parent</artifactId>
+        <artifactId>component-ids</artifactId>
         <groupId>com.wso2telco.ids</groupId>
-        <version>2.3.0</version>
-        <relativePath>../../parent/pom.xml</relativePath>
+        <version>2.4.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>token-introspection</artifactId>
