--- a/components/user-registration/pom.xml
+++ b/components/user-registration/pom.xml
@@ -17,9 +17,9 @@
 
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
-		<artifactId>component-ids-parent</artifactId>
+		<artifactId>component-ids</artifactId>
 		<version>2.3.0-SNAPSHOT</version>
-		<relativePath>../../parent/pom.xml</relativePath>
+		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>	
