Changing package names and resolving OSGI issues

--- a/components/user-claim-retriever/pom.xml
+++ b/components/user-claim-retriever/pom.xml
@@ -108,8 +108,7 @@
 						<Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
 						<Bundle-Name>${project.artifactId}</Bundle-Name>
 						<Bundle-Version>${project.version}</Bundle-Version>							
-						<Export-Package>com.wso2telco.*</Export-Package>
-
+						<Export-Package>!com.wso2telco.core.*,com.wso2telco.user.*</Export-Package>
 						<Import-Package>
                             org.osgi.framework,
                             *;resolution:=optional
