--- a/components/session-updater/pom.xml
+++ b/components/session-updater/pom.xml
@@ -96,12 +96,12 @@
 			<artifactId>config-util</artifactId>
 			<scope>provided</scope>
 		</dependency>
-		<dependency>
+		<!--dependency>
 			<groupId>com.wso2telco.ids</groupId>
 			<artifactId>common-util</artifactId>
 			<version>2.3.0-SNAPSHOT</version>
 			<scope>provided</scope>
-		</dependency>
+		</dependency-->
         <dependency>
             <groupId>com.wso2telco.ids</groupId>
             <artifactId>ids-data-publisher</artifactId>
@@ -118,7 +118,7 @@
         <dependency>
             <groupId>com.wso2telco.ids</groupId>
             <artifactId>common-util</artifactId>
-            <scope>provided</scope>
+            <version>2.4.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 	<build>
