--- a/components/auth-proxy-service/pom.xml
+++ b/components/auth-proxy-service/pom.xml
@@ -115,6 +115,7 @@
         <groupId>com.wso2telco.ids</groupId>
         <artifactId>common-util</artifactId>
         <version>2.4.0-SNAPSHOT</version>
+        <scope>provided</scope>
     </dependency>
     <dependency>
         <groupId>org.apache.httpcomponents</groupId>
